[package]
name = "hades"
version = "0.1.0"
authors = ["McMackety <macdonnell.chase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hades-server"
path = "src/server.rs"

[dependencies]
bytes = "1"
tonic = "0.4.0"
prost = "0.7"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"

[build-dependencies]
tonic-build = "0.4"